Update project from local environment
